// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init-cert (LONG) cert bad hostname 1`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
-------------------------------------------------------------------------------
>> Creating certificate authority "local_ca"
>>>> Generate PKCS12 format local CA with alias local_ca:
>> Certificate authority local_ca is created successfully.
-------------------------------------------------------------------------------
>> Export keystore /test/dir/pkcs12/local_ca/local_ca.keystore.p12
>>>> List content of keystore "/test/dir/pkcs12/local_ca/local_ca.keystore.p12":
>>>> Export certificate "local_ca" to PEM format
>> Keystore /test/dir/pkcs12/local_ca/local_ca.keystore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Creating certificate "localhost"
>>>> Generate certificate "localhost" in the keystore localhost:
>>>> Generate CSR for the certificate "localhost" in the keystore "localhost":
>>>> Sign the CSR using the Certificate Authority "local_ca":
>>>> Import the Certificate Authority "local_ca" to the keystore "localhost":
>>>> Import the Certificate Authority "local_ca" to the truststore "localhost":
>>>> Import the signed CSR to the keystore "localhost":
>> Certificate localhost is created successfully.
-------------------------------------------------------------------------------
>> Trust z/OSMF "doesnt-exist.anywhere.cloud:12321"
>>>> Getting certificates from service host
Failed to get certificate of service instance https://doesnt-exist.anywhere.cloud:12321, exit code 1.
Error ZWEL0170E: Failed to trust z/OSMF "doesnt-exist.anywhere.cloud:12321"."
`;

exports[`init-cert (LONG) passing init 1`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
-------------------------------------------------------------------------------
>> Creating certificate authority "local_ca"
>>>> Generate PKCS12 format local CA with alias local_ca:
>> Certificate authority local_ca is created successfully.
-------------------------------------------------------------------------------
>> Export keystore /test/dir/pkcs12/local_ca/local_ca.keystore.p12
>>>> List content of keystore "/test/dir/pkcs12/local_ca/local_ca.keystore.p12":
>>>> Export certificate "local_ca" to PEM format
>> Keystore /test/dir/pkcs12/local_ca/local_ca.keystore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Creating certificate "localhost"
>>>> Generate certificate "localhost" in the keystore localhost:
>>>> Generate CSR for the certificate "localhost" in the keystore "localhost":
>>>> Sign the CSR using the Certificate Authority "local_ca":
>>>> Import the Certificate Authority "local_ca" to the keystore "localhost":
>>>> Import the Certificate Authority "local_ca" to the truststore "localhost":
>>>> Import the signed CSR to the keystore "localhost":
>> Certificate localhost is created successfully.
-------------------------------------------------------------------------------
>> Trust z/OSMF "some.test.hostname:12321"
>>>> Getting certificates from service host
>>>> Import a certificate "zosmf00" to the truststore:
>>>> Import a certificate "zosmf01" to the truststore:
>> Certificate zosmf is added to truststore successfully.
-------------------------------------------------------------------------------
>> Export keystore /test/dir/pkcs12/localhost/localhost.keystore.p12
>>>> List content of keystore "/test/dir/pkcs12/localhost/localhost.keystore.p12":
>>>> Export certificate "localhost" to PEM format
>>>> Export certificate "local_ca" to PEM format
>>>> Certificate "/test/dir/pkcs12/localhost/local_ca.cer is in EBCDIC.
>>>> Exporting certificate "localhost" private key
>> Keystore /test/dir/pkcs12/localhost/localhost.keystore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Export keystore /test/dir/pkcs12/localhost/localhost.truststore.p12
>>>> List content of keystore "/test/dir/pkcs12/localhost/localhost.truststore.p12":
>>>> Export certificate "local_ca" to PEM format
>>>> Certificate "/test/dir/pkcs12/localhost/local_ca.cer is in EBCDIC.
>>>> Export certificate "zosmf00" to PEM format
>>>> Certificate "/test/dir/pkcs12/localhost/zosmf00.cer is in EBCDIC.
>>>> Export certificate "zosmf01" to PEM format
>>>> Certificate "/test/dir/pkcs12/localhost/zosmf01.cer is in EBCDIC.
>> Keystore /test/dir/pkcs12/localhost/localhost.truststore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Lock keystore directory /test/dir/pkcs12
>> Keystore directory /test/dir/pkcs12 is locked.
-------------------------------------------------------------------------------
>> Update certificate configuration to /test/dir/zowe.test.yaml
Please manually update to these values:
zowe:
  certificate:
    keystore:
      type: PKCS12
      file: "/test/dir/pkcs12/localhost/localhost.keystore.p12"
      password: "password"
      alias: "localhost"
    truststore:
      type: PKCS12
      file: "/test/dir/pkcs12/localhost/localhost.truststore.p12"
      password: "password"
    pem:
      key: "/test/dir/pkcs12/localhost/localhost.key"
      certificate: "/test/dir/pkcs12/localhost/localhost.cer"
      certificateAuthorities: "/test/dir/pkcs12/local_ca/local_ca.cer"
>> Zowe configuration requires manual updates."
`;

exports[`init-cert (SHORT) cert missing zowe.yaml vars 1`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL TEST.DATASET.PFX.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-cert (SHORT) cert missing zowe.yaml vars 2`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
Error ZWEL0157E: Zowe dataset prefix (zowe.setup.dataset.prefix) is not defined in Zowe YAML configuration file."
`;

exports[`init-cert (SHORT) cert missing zowe.yaml vars 3`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
Error ZWEL0326E: An error occurred while processing Zowe YAML config /test/dir/zowe.test.yaml:
    about to validate merged yamls as
    {
      "zowe": {
        "setup": {
          "jcl": {
            "enable": true,
            "header": ""
          },
          "dataset": {
            "prefix": "TEST.DATASET.PFX",
            "proclib": "TEST.DATASET.PFX.TEST.PROCLIB",
            "parmlib": "TEST.DATASET.PFX.PARMLIB",
            "parmlibMembers": {
              "zis": "ZWESIP00"
            },
            "jcllib": "TEST.DATASET.PFX.JCLLIB",
            "loadlib": "TEST.DATASET.PFX.SZWEEXEC",
            "authLoadlib": "TEST.DATASET.PFX.SZWEAUTH",
            "authPluginLib": "TEST.DATASET.PFX.ZWESAPL"
          },
          "vsam": {
            "mode": "NONRLS",
            "volume": "TSTVOL",
            "storageClass": "",
            "name": "TEST.DATASET.PFX.VSAM"
          },
          "certificate": {
            "type": null,
            "pkcs12": {
              "directory": "/var/zowe/keystore"
            }
          }
        },
        "certificate": {
          "keystore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password",
            "alias": "localhost"
          },
          "truststore": {
            "type": "JCERACFKS",
            "file": "safkeyring://<stc_username>/<keyring_name>",
            "password": "password"
          }
        },
        "runtimeDirectory": "/test/dir",
        "logDirectory": "/test/dir/logs",
        "workspaceDirectory": "/test/dir/workspace",
        "extensionDirectory": "/global/zowe/extensions",
        "configmgr": {
          "validation": "STRICT"
        },
        "job": {
          "name": "ZWE1SV",
          "prefix": "ZWE1"
        },
        "rbacProfileIdentifier": "1",
        "cookieIdentifier": "1",
        "externalDomains": [
          "example.com"
        ],
        "externalPort": 7554,
        "network": {
          "server": {
            "tls": {
              "attls": false,
              "minTls": "TLSv1.2",
              "maxTls": "TLSv1.3"
            }
          },
          "client": {
            "tls": {
              "attls": false
            }
          }
        },
        "sysMessageTrim": false,
        "sysMessages": [
          "ZWEL0021I",
          "ZWEL0018I",
          "ZWEL0006I",
          "ZWES1601I",
          "ZWEL0008I",
          "ZWEL0022I",
          "ZWEL0001I",
          "ZWEL0002I",
          "ZWEAM000I",
          "ZWED0031I",
          "ZWES1013I"
        ],
        "launchScript": {
          "logLevel": "info",
          "onComponentConfigureFail": "warn"
        },
        "verifyCertificates": "STRICT"
      },
      "java": {
        "home": "/test/java/home"
      },
      "zOSMF": {
        "host": "some.test.hostname",
        "port": 12321,
        "applId": "IZUDFLT"
      },
      "components": {
        "apiml": {
          "enabled": true,
          "debug": false
        },
        "gateway": {
          "enabled": true,
          "port": 7554,
          "debug": false,
          "apiml": {
            "security": {
              "auth": {
                "provider": "saf"
              },
              "authorization": {
                "endpoint": {
                  "enabled": false
                },
                "provider": "native"
              },
              "x509": {
                "enabled": false
              }
            }
          }
        },
        "zaas": {
          "enabled": true,
          "port": 7558,
          "debug": false
        },
        "api-catalog": {
          "enabled": true,
          "port": 7552,
          "debug": false
        },
        "discovery": {
          "enabled": true,
          "port": 7553,
          "debug": false
        },
        "caching-service": {
          "enabled": true,
          "port": 7555,
          "debug": false,
          "storage": {
            "evictionStrategy": "reject",
            "mode": "infinispan",
            "infinispan": {
              "jgroups": {
                "port": 7600,
                "keyExchange": {
                  "port": 7601
                }
              }
            }
          }
        },
        "app-server": {
          "enabled": true,
          "port": 7556,
          "debug": false
        },
        "zss": {
          "enabled": true,
          "port": 7557,
          "crossMemoryServerName": "ZWESIS_STD",
          "agent": {
            "64bit": true
          }
        },
        "explorer-jes": {
          "enabled": true
        },
        "explorer-mvs": {
          "enabled": true
        },
        "explorer-uss": {
          "enabled": true
        }
      }
    }
    validate status = 4
    Validity Exceptions:
    Validity Exceptions(s) with object at
      Validity Exceptions(s) with object at /zowe
        Validity Exceptions(s) with object at /zowe/setup
          Schema at '/zowe/setup/certificate' invalid
            not oneOf schemas at '/zowe/setup/certificate' are valid, 0 are
              Validity Exceptions(s) with object at /zowe/setup/certificate
                unequal constant value at /zowe/setup/certificate/type; expecting value 'PKCS12' of type 'integer'
              Validity Exceptions(s) with object at /zowe/setup/certificate
                missing required property 'keyring' at '/zowe/setup/certificate'
                no matching enum value at /zowe/setup/certificate/type; expecting one of values '[JCEKS, JCECCAKS, JCERACFKS, JCECCARACFKS, JCEHYBRIDRACFKS]' of type 'integer'"
`;

exports[`init-cert (SHORT) run each scenario 1`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
-------------------------------------------------------------------------------
>> Creating certificate authority "local_ca"
>>>> Generate PKCS12 format local CA with alias local_ca:
>> Certificate authority local_ca is created successfully.
-------------------------------------------------------------------------------
>> Export keystore /var/zowe/keystore/local_ca/local_ca.keystore.p12
>>>> List content of keystore "/var/zowe/keystore/local_ca/local_ca.keystore.p12":
>>>> Export certificate "local_ca" to PEM format
>> Keystore /var/zowe/keystore/local_ca/local_ca.keystore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Creating certificate "localhost"
>>>> Generate certificate "localhost" in the keystore localhost:
>>>> Generate CSR for the certificate "localhost" in the keystore "localhost":
>>>> Sign the CSR using the Certificate Authority "local_ca":
>>>> Import the Certificate Authority "local_ca" to the keystore "localhost":
>>>> Import the Certificate Authority "local_ca" to the truststore "localhost":
>>>> Import the signed CSR to the keystore "localhost":
>> Certificate localhost is created successfully.
-------------------------------------------------------------------------------
>> Trust z/OSMF "some.test.hostname:12321"
>>>> Getting certificates from service host
>>>> Import a certificate "zosmf00" to the truststore:
>>>> Import a certificate "zosmf01" to the truststore:
>> Certificate zosmf is added to truststore successfully.
-------------------------------------------------------------------------------
>> Export keystore /var/zowe/keystore/localhost/localhost.keystore.p12
>>>> List content of keystore "/var/zowe/keystore/localhost/localhost.keystore.p12":
>>>> Export certificate "localhost" to PEM format
>>>> Export certificate "local_ca" to PEM format
>>>> Certificate "/var/zowe/keystore/localhost/local_ca.cer is in EBCDIC.
>>>> Exporting certificate "localhost" private key
>> Keystore /var/zowe/keystore/localhost/localhost.keystore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Export keystore /var/zowe/keystore/localhost/localhost.truststore.p12
>>>> List content of keystore "/var/zowe/keystore/localhost/localhost.truststore.p12":
>>>> Export certificate "local_ca" to PEM format
>>>> Certificate "/var/zowe/keystore/localhost/local_ca.cer is in EBCDIC.
>>>> Export certificate "zosmf00" to PEM format
>>>> Certificate "/var/zowe/keystore/localhost/zosmf00.cer is in EBCDIC.
>>>> Export certificate "zosmf01" to PEM format
>>>> Certificate "/var/zowe/keystore/localhost/zosmf01.cer is in EBCDIC.
>> Keystore /var/zowe/keystore/localhost/localhost.truststore.p12 is exported successfully.
-------------------------------------------------------------------------------
>> Lock keystore directory /var/zowe/keystore
>> Keystore directory /var/zowe/keystore is locked.
-------------------------------------------------------------------------------
>> Update certificate configuration to /test/dir/zowe.test.yaml
Please manually update to these values:
zowe:
  certificate:
    keystore:
      type: PKCS12
      file: "/var/zowe/keystore/localhost/localhost.keystore.p12"
      password: "password"
      alias: "localhost"
    truststore:
      type: PKCS12
      file: "/var/zowe/keystore/localhost/localhost.truststore.p12"
      password: "password"
    pem:
      key: "/var/zowe/keystore/localhost/localhost.key"
      certificate: "/var/zowe/keystore/localhost/localhost.cer"
      certificateAuthorities: "/var/zowe/keystore/local_ca/local_ca.cer"
>> Zowe configuration requires manual updates.
-------------------------------------------------------------------------------
>> Verify certificate of "some.test.hostname:12321"
>>>> Validate certificate of some.test.hostname:12321
Error: some.test.hostname certificate doesn't have subject alternate name(s)
Error ZWEL0171E: Failed to verify certificate (CN and SAN) of "some.test.hostname:12321"."
`;

exports[`init-cert (SHORT) run each scenario 2`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
Error ZWEL0157E: (zowe.setup.certificate.pkcs12.name) is not defined in Zowe YAML configuration file."
`;

exports[`init-cert (SHORT) run each scenario 3`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
cp: FSUM6258 cannot open file "//'IBMUSER.ZWEV3.SZWESAMP(ZWEGENER)'": EDC5049I The specified file name could not be located. (errno2=0xC00B0641)
Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL IBMUSER.ZWEV3.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-cert (SHORT) run each scenario 4`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
cp: FSUM6258 cannot open file "//'IBMUSER.ZWEV3.SZWESAMP(ZWEGENER)'": EDC5049I The specified file name could not be located. (errno2=0xC00B0641)
Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL IBMUSER.ZWEV3.SZWESAMP(ZWEGENER) before running this command."
`;

exports[`init-cert (SHORT) run each scenario 5`] = `
"-------------------------------------------------------------------------------
>> Generate certificate
cp: FSUM6258 cannot open file "//'IBMUSER.ZWEV3.SZWESAMP(ZWEGENER)'": EDC5049I The specified file name could not be located. (errno2=0xC00B0641)
Error ZWEL0319E: zowe.setup.dataset.jcllib does not exist, cannot run. Run 'zwe init', 'zwe init generate', or submit JCL IBMUSER.ZWEV3.SZWESAMP(ZWEGENER) before running this command."
`;
